--- a/51careerweb/public/user/profile/style/css/style2.css
+++ b/51careerweb/public/user/profile/style/css/style2.css
@@ -2,14 +2,14 @@
 
 *{outline: none; }html,body{height:100%;}
 #body{min-height: 100%;height: auto !important; height: 100%; margin: 0 0 -37px;}
-body{margin:0;padding:0; font:14px/22px "微软雅黑","宋体",Arial; color:#333;word-wrap:break-word;}
+body{margin:0;padding:0; font:14px/22px Arial; color:#333;word-wrap:break-word;}
 .clearfix:after{content: "";height: 0;clear: both;visibility: hidden;}
 .clearfix{display: inline-block;}  /* for IE/Mac */
 h1,h2,h3,h4,h5{font-weight:normal;}
-input[type="text"],input[type="password"]{border:2px solid #f1f1f1;outline:none;font:20px/32px "微软雅黑","宋体",Arial; width: 600px; padding: 6px 10px; margin-top:20px;transition:border 0.2s ease-in 0s;}
-input[type="button"],input[type="submit"]{font-family:"微软雅黑","宋体",Arial;outline:none;cursor:pointer;border:none;}
+input[type="text"],input[type="password"],input[type="date"]{width:fill;border:2px solid #f1f1f1;outline:none;font:20px/32px Arial; padding: 6px 10px;transition:border 0.2s ease-in 0s;}
+input[type="button"],input[type="submit"]{font-family:Arial;outline:none;cursor:pointer;border:none;}
 input[type="text"]:focus,input[type="password"]:focus{border:2px solid #d4e2e4;}
-textarea{ border:2px solid #f1f1f1; width:600px; height:260px;outline:none; resize:none; font:20px/32px "微软雅黑","宋体",Arial; padding:6px 10px; margin-top:20px;transition:border 0.2s ease-in 0s;}
+textarea{ border:2px solid #f1f1f1; width:600px; height:260px;outline:none; resize:none; font:20px/32px Arial; padding:6px 10px; margin-top:20px;transition:border 0.2s ease-in 0s;}
 textarea:focus{ border:2px solid #d4e2e4; }:focus {outline: 0;}.placeholder { color: #777; }img{border:none;}
 .dn{ display:none;}.db{display:block;}.fl{float:left!important;}.fr{float:right!important;}.clear{ clear:both;}
 a{color:#555; text-decoration:none;cursor:pointer;-moz-transition: background-color 0.2s ease-out,color 0.1s ease-out; -webkit-transition: background-color 0.2s ease-out,color 0.1s ease-out;-ms-transition: background-color 0.2s ease-out,color 0.1s ease-out;transition: background-color 0.2s ease-out,color 0.1s ease-out;}a:hover{color:#019875;}
@@ -157,7 +157,7 @@ ul.hot_pos i{width: 12px;height: 14px;position:absolute;background:url(img/hot.p
 .hot_pos .recommend:hover span{display:block;}
 .hot_pos .recommend em{font-size:12px;color:#999;}
 .companyTags li{font-size:12px;float:left; padding:0 5px; background:#fff; border:1px solid #a9a9a9;color:#a9a9a9;margin:5px 15px 0 0; line-height:18px;}
-.btn{font-size:16px;color:#fff;background:#0d9572 url(img/arrow.png) 88px center no-repeat;padding:5px 40px 5px 15px;margin:10px 0 0 0;}
+.btn{font-size:16px;color:#fff;background:#0d9572;}
 .btn:hover{background-color:#00694e; color:#fff;}
 #backtop{display:none;background:url(img/backtop.png) left top no-repeat;width:28px;height:64px;position:fixed;bottom:80px;margin-left:1060px; cursor:pointer;}
 #backtop:hover{background-position:right top !important;}
@@ -2018,7 +2018,7 @@ ul.my_collections li i{float:right;width:1px;height:24px;background: url(img/arr
 
 /*didi tip*/
 #tip_didi{background:#fff7d0;padding:5px 20px;}
-#tip_didi a{color:#888686;float:right;text-decoration:underline;*margin:-27px 10px 0 0;}
+#tip_didi a{color:#888686;float:right;*margin:-27px 10px 0 0;}
 #tip_didi_img{width:273px;height:118px;background:url(img/tip_didi.png) no-repeat;position:absolute;z-index:100;margin:-20px 0 0 140px;*margin:-20px 0 0 70px;}
 #tip_didi_img a{display:block;width:86px;height:28px;margin:75px 0 0 97px;}
 /*end*/
