--- a/public/user/css/style.css
+++ b/public/user/css/style.css
@@ -334,7 +334,6 @@ div#preloader {
 /* Desktop Navigation */
 .nav-menu, .nav-menu * {
   margin: 0;
-  padding: 0;
   list-style: none;
 }
 
@@ -369,17 +368,16 @@ div#preloader {
   padding: 10px 0;
   background: #fff;
   box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-  transition: ease all 0.3s;
+  transition: ease all 0.2s;
 }
 
 .nav-menu .drop-down:hover > ul {
   opacity: 1;
-  top: 100%;
+  top: 150%;
   visibility: visible;
 }
 
 .nav-menu .drop-down li {
-  min-width: 180px;
   position: relative;
 }
 
@@ -395,7 +393,7 @@ div#preloader {
   color: #3ec1d5;
 }
 
-.nav-menu .drop-down > a:after {
+.nav-menu .drop-down-with-arrow > a:after {
   content: "\ea99";
   font-family: IcoFont;
   padding-left: 5px;
