--- a/public/user/story/assets/css/style.css
+++ b/public/user/story/assets/css/style.css
@@ -1261,7 +1261,7 @@ section1 {
   cursor: pointer;
   margin: 0 12px 5px 12px;
   display: inline-block;
-  padding: 0 4px 6px 4px;
+  padding: 0 4px 0px 4px;
   font-size: 16px;
   font-weight: 500;
   line-height: 20px;
@@ -1275,6 +1275,7 @@ section1 {
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
   border-color: #68A4C4;
   color: #68A4C4;
+  line-height:1px;
 }
 
 .portfolio .portfolio-item {
