--- a/public/user/story/assets/css/style.css
+++ b/public/user/story/assets/css/style.css
@@ -3,7 +3,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Lora", sans-serif;
   color: #444;
 }
 
