--- a/public/user/vedio/css/style.css
+++ b/public/user/vedio/css/style.css
@@ -3,7 +3,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Lora", sans-serif;
   color: #444;
 }
 
@@ -17,7 +17,7 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6, .font-primary {
-  font-family: "Roboto", sans-serif;
+  font-family: "Lora", sans-serif;
 }
 
 /*--------------------------------------------------------------
@@ -59,7 +59,7 @@ h1, h2, h3, h4, h5, h6, .font-primary {
   z-index: 997;
   transition: all 0.5s;
   padding: 20px 0;
-  background: #1e4356;
+  background: rgba(240, 255, 255, 0.8);
 }
 
 #header.header-transparent {
@@ -67,11 +67,10 @@ h1, h2, h3, h4, h5, h6, .font-primary {
 }
 
 #header.header-scrolled {
-  background: rgba(30, 67, 86, 0.8);
+  background: rgba(240, 255, 255, 0.8);
   height: 60px;
   padding: 10px 0;
 }
-
 #header .logo h1 {
   font-size: 28px;
   margin: 0;
@@ -116,7 +115,7 @@ h1, h2, h3, h4, h5, h6, .font-primary {
 .nav-menu a {
   display: block;
   position: relative;
-  color: #ddecf5;
+  color: black;
   padding: 10px 15px;
   transition: 0.3s;
   font-size: 14px;
