--- a/public/user/css/style.css
+++ b/public/user/css/style.css
@@ -48,6 +48,107 @@ footer {
   height: 640px;
   width: 640px;
 }
+
+
+
+
+.box {
+  width: 850px;
+  height: 500px;
+  /* border: 2px solid #333; */
+  margin: 20px auto;
+  position: relative;
+  overflow: hidden;
+  margin-left:10%;
+}
+
+.box ul {
+  position: absolute;
+  list-style: none;
+  left: 0;
+  top: 0;
+}
+
+.box ul li {
+  height: 500px;
+  float: left;
+}
+
+.box ul li img {
+  width: 850px;
+  height: 500px;
+}
+
+.box ol {
+  position: absolute;
+  z-index: 9;
+  list-style: none;
+  height: 10px;
+  left: 50%;
+  margin-left: -35px;
+  bottom: 20px;
+}
+
+.box ol li {
+  width: 10px;
+  height: 10px;
+  border: .5px solid #aaa;
+  border-radius: 50%;
+  margin-left: 5px;
+  float: left;
+  background-color: #fff;
+  cursor: pointer;
+  padding-top:10px;
+}
+
+.box #btn {
+  position: absolute;
+  width: 100%;
+  height: 80px;
+  top: 50%;
+  margin-top: -40px;
+  user-select: none;
+}
+
+.box .btn {
+  width: 50px;
+  height: 80px;
+  text-align: center;
+  line-height: 80px;
+  font-size: 35px;
+  z-index: 9;
+  background-color: rgba(0, 0, 0, 0.4);
+  color: rgb(230, 225, 225);
+}
+
+.box .btnLeft {
+  float: left;
+  margin-left: 0px;
+  cursor: pointer;
+}
+
+.box .btnRight {
+  float: right;
+  margin-right: 0px;
+  cursor: pointer;
+
+}
+
+.box ol .active {
+  background-color: #97c8f8;
+
+
+}
+
+
+
+
+
+
+
+
+
+
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -243,14 +344,14 @@ div#preloader {
 
 .section-headline h2::after {
   border: 1px solid #333;
-  top: -20px;
+  top: -50px;
   content: "";
   left: 0;
   margin: 0 auto;
   position: absolute;
   right: 0;
   margin-left:0px ;
-  width: 50%;
+  width: 70%;
 }
 
 
@@ -1074,11 +1175,11 @@ preview-2
 
 .team1 .team_member{
   background: #FFF;
-  margin: 50px;
-  margin-top: 50px;
+  margin: 30px;
+  margin-top: 10px;
   margin-bottom: 50px;
   width: 250px;
-  padding: 20px;
+  padding: 10px;
   line-height: 20px;
   color: #8e8b8b;
   position: relative;
@@ -1099,19 +1200,21 @@ preview-2
 
 .team1 .team_member .team_img{
   position: absolute;
-  top: -50px;
+  padding-bottom: 30px;
   left: 50%;
+  top:-2%;
   transform: translateX(-50%);
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
+  width: 60px;
+  height:50px;
+
   background: #fff;
 }
 
 .team1 .team_member .team_img img{
-  width: 100px;
-  height: 100px;
-  padding: 5px;
+
+  width: 60px;
+  height: 60px;
+  padding-bottom: 5px;
 }
 
 
@@ -2068,7 +2171,7 @@ preview-2
   margin-top: 10px;
   padding: 10px 20px;
   text-align: center;
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
   transition: all 0.4s ease 0s;
 }
 
@@ -2159,7 +2262,7 @@ preview-2
   margin-top: 30px;
   padding: 12px 40px;
   text-align: center;
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
   transition: all 0.4s ease 0s;
   z-index: 222;
 }
