--- a/public/user/css/style.css
+++ b/public/user/css/style.css
@@ -511,6 +511,86 @@ div#preloader {
 # Nav
 --------------------------------------------------------------*/
 /*--------------------------------------------------------------
+# Header
+--------------------------------------------------------------*/
+#header {
+  font-family: 'Lora', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  height: 80px;
+  transition: all 0.5s;
+  z-index: 997;
+  padding: 20px 0;
+  background: #FFF;
+  border: 1px solid #CCC;
+}
+
+#header.header-scrolled {
+  background: #FFF;
+  height: 60px;
+  padding: 10px 0;
+  border: 1px solid #CCC;
+}
+
+#header .logo h1 {
+  font-size: 36px;
+  margin: 0;
+  padding: 0;
+  line-height: 1;
+  font-weight: bold;
+}
+
+#header .logo h1 span {
+  color: #3078be;
+}
+
+#header a:hover {
+  color: #3078be;
+  text-decoration: none;
+}
+
+#header .logo img {
+  padding: 0;
+  margin: 0;
+  max-height: 22px;
+  border-radius: 50%;
+}
+
+@media (max-width: 768px) {
+  #header {
+    height: 60px;
+    padding: 10px 0;
+    background: rgba(240, 255, 255, 0.8);
+  }
+  #header .logo h1 {
+    font-size: 28px;
+    padding: 4px 0;
+  }
+}
+
+.header-bg {
+  background: url(../img/slider/slider1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top center;
+}
+
+@media (min-width: 1025px) {
+  .header-bg {
+    background-attachment: fixed;
+  }
+}
+
+.home-overly {
+  background: rgba(240, 255, 255, 0.8);
+  height: 100%;
+  position: absolute;
+  width: 100%;
+}
+
+/*--------------------------------------------------------------
+# Nav
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
 /* Desktop Navigation */
@@ -531,7 +611,7 @@ div#preloader {
   color: #000000;
   padding: 8px 8px 8px 8px;
   transition: 0.3s;
-  font-size: 15px;
+  font-size: 17px;
 }
 
 .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
@@ -565,7 +645,7 @@ div#preloader {
 
 .nav-menu .drop-down ul a {
   padding: 10px 20px;
-  font-size: 14px;
+  font-size: 17px;
   text-transform: none;
   color: black;
 }
@@ -720,6 +800,7 @@ div#preloader {
 .mobile-nav-active .mobile-nav-toggle i {
   color: #fff;
 }
+
 
 /*--------------------------------------------------------------
 # Slider
