--- a/public/user/css/style.css
+++ b/public/user/css/style.css
@@ -236,8 +236,9 @@ p {
 h1, h2, h3, h4, h5, h6 {
   margin: 0 0 15px;
   color: #444;
-  font-weight: 500;
+
 }
+
 
 h1 {
   font-size: 48px;
@@ -319,7 +320,7 @@ body {
 }
 
 .back-to-top:hover {
-  background: #3cd6ed;
+  background:#01497C;
   color: #fff;
 }
 
@@ -473,12 +474,22 @@ div#preloader {
   #header {
     height: 60px;
     padding: 10px 0;
-    background: rgba(240, 255, 255, 0.8);
+    background: #FFF;
   }
   #header .logo h1 {
     font-size: 28px;
     padding: 4px 0;
   }
+  #header .logo img {
+    padding: 0;
+    margin: 0;
+    max-height: 15px;
+    border-radius: 50%;
+  }
+
+
+
+
 }
 
 .header-bg {
@@ -569,29 +580,29 @@ div#preloader {
 }
 
 .nav-menu .drop-down-with-arrow > a:after {
-  content: "\ea99";
-  font-family: IcoFont;
-  padding-left: 5px;
-}
+  /*  content: "\ea99";
+   font-family: IcoFont;*/
+   padding-left: 5px;
+ }
 
-.nav-menu .drop-down .drop-down ul {
-  top: 0;
-  left: calc(100% - 30px);
-}
+ .nav-menu .drop-down .drop-down ul {
+   top: 0;
+   left: calc(100% - 30px);
+ }
 
-.nav-menu .drop-down .drop-down:hover > ul {
-  opacity: 1;
-  top: 0;
-  left: 100%;
-}
+ .nav-menu .drop-down .drop-down:hover > ul {
+   opacity: 1;
+   top: 0;
+   left: 100%;
+ }
 
-.nav-menu .drop-down .drop-down > a {
-  padding-right: 35px;
-}
+ .nav-menu .drop-down .drop-down > a {
+   padding-right: 35px;
+ }
 
-.nav-menu .drop-down .drop-down > a:after {
-  content: "\eaa0";
-  font-family: IcoFont;
+ .nav-menu .drop-down .drop-down > a:after {
+   /* content: "\eaa0";
+   font-family: IcoFont;*/
   position: absolute;
   right: 15px;
 }
@@ -604,7 +615,7 @@ div#preloader {
     left: -100%;
   }
   .nav-menu .drop-down .drop-down > a:after {
-    content: "\ea9d";
+   /* content: "\ea9d";*/
   }
 }
 
@@ -665,54 +676,58 @@ div#preloader {
 }
 
 .mobile-nav .drop-down > a:after {
-  content: "\ea99";
-  font-family: IcoFont;
+ /* content: "\ea99";
+  font-family: IcoFont;*/
   padding-left: 10px;
   position: absolute;
   right: 15px;
 }
 
 .mobile-nav .active.drop-down > a:after {
-  content: "\eaa1";
+/* content: "\ea99";*/
 }
 
+
+
+
+
 .mobile-nav .drop-down > a {
-  padding-right: 35px;
+ padding-right: 35px;
 }
 
 .mobile-nav .drop-down ul {
-  display: none;
-  overflow: hidden;
+ display: none;
+ overflow: hidden;
 }
 
 .mobile-nav .drop-down li {
-  padding-left: 20px;
+ padding-left: 20px;
 }
 
 .mobile-nav-overly {
-  width: 100%;
-  height: 100%;
-  z-index: 9997;
-  top: 0;
-  left: 0;
-  position: fixed;
-  background: rgba(1, 2, 2, 0.6);
-  overflow: hidden;
-  display: none;
-  transition: ease-in-out 0.2s;
+ width: 100%;
+ height: 100%;
+ z-index: 9997;
+ top: 0;
+ left: 0;
+ position: fixed;
+ background: rgba(1, 2, 2, 0.6);
+ overflow: hidden;
+ display: none;
+ transition: ease-in-out 0.2s;
 }
 
 .mobile-nav-active {
-  overflow: hidden;
+ overflow: hidden;
 }
 
 .mobile-nav-active .mobile-nav {
-  opacity: 1;
-  visibility: visible;
+ opacity: 1;
+ visibility: visible;
 }
 
 .mobile-nav-active .mobile-nav-toggle i {
-  color: #fff;
+ color: #fff;
 }
 
 /*--------------------------------------------------------------
@@ -834,76 +849,7 @@ div#preloader {
   -ms-transform: rotate(180deg);
 }
 
-/* Normal desktop :992px. */
-@media (min-width: 1400px) and (max-width: 1920px) {
-  .slider-content {
-    padding: 340px 0;
-  }
-}
 
-/* Normal desktop :992px. */
-@media (min-width: 992px) and (max-width: 1169px) {
-  .slider-content {
-    padding: 144px 0;
-  }
-}
-
-/* Tablet desktop :768px. */
-@media (min-width: 768px) and (max-width: 991px) {
-  .slider-content {
-    padding: 93px 0;
-  }
-  .layer-1-2 h1 {
-    font-size: 22px;
-    line-height: 24px;
-  }
-  .layer-1-3 a.ready-btn {
-    font-size: 14px;
-    margin-top: 20px;
-    padding: 10px 20px;
-  }
-}
-
-@media (max-width: 767px) {
-  .nivo-directionNav {
-    display: none;
-  }
-  .slider-content {
-    padding: 46px 0px;
-  }
-  .layer-1-2 {
-    margin: 10px 0;
-  }
-  .layer-1-1 h2 {
-    font-size: 14px;
-    line-height: 16px;
-  }
-  .layer-1-2 h1 {
-    font-size: 14px;
-    line-height: 16px;
-  }
-  .layer-1-3 a.ready-btn {
-    font-size: 12px;
-    margin-top: 10px;
-    padding: 8px 10px;
-  }
-  .layer-1-3 {
-    margin: 10px 0 0;
-  }
-  .nivo-controlNav {
-    bottom: -8px;
-  }
-}
-
-@media only screen and (min-width: 480px) and (max-width: 767px) {
-  .slider-content {
-    padding: 70px 0px;
-  }
-  .layer-1-1 h2, .layer-1-2 h1 {
-    font-size: 24px;
-    line-height: 30px;
-  }
-}
 
 /* -------------------------------------
 preview-1
@@ -2777,7 +2723,7 @@ span.email-notes {
 }
 
 /* Normal desktop :992px. */
-@media (min-width: 992px) and (max-width: 1169px) {
+@media (min-width: 992px)  {
   .slider-content {
     padding: 146px 0;
   }
@@ -2788,12 +2734,53 @@ span.email-notes {
     font-size: 18px;
     line-height: 28px;
   }
+  h4 {
+
+    font-size: 21px;
+    line-height:1.6em;
+    font-weight:500;
+  }
+
+
+  .layer-1-1 h2 {
+    font-size: 12px;
+    padding: 0px 30px;
+  }
+
+}
+
+
+
+@media  (max-width: 767px) {
+
+  h4 {
+
+    font-size: 18px;
+    line-height:1.5em;
+  }
+
+
+  .layer-1-1 h2 {
+    font-size: 52px;
+    padding: 0px 30px;
+  }
+
+
 }
 
 /* Tablet desktop :768px. */
 @media (min-width: 768px) and (max-width: 991px) {
+
+  h4 {
+
+    font-size: 20px;
+    line-height:1.5em;
+  }
+
+
   .layer-1-1 h2 {
-    font-size: 24px;
+    font-size:52px;
+    padding: 0px 30px;
   }
   .layer-1-2 h1 {
     font-size: 31px;
@@ -2888,8 +2875,8 @@ span.email-notes {
     padding: 80px 0;
   }
   .slider-content h2 {
-    font-size: 18px !important;
-    line-height: 24px !important;
+    font-size: 36px !important;
+    line-height: 40px !important;
   }
   .slider-content h1 {
     font-size: 20px !important;
@@ -3072,8 +3059,288 @@ ul.team-socil-w3pvts li span:hover {
   }
 }
 
-@media (max-width: 575px) {
+
+
+
+
+/** NEW**/
+/* Desktop Navigation */
+.nav-menu1, .nav-menu1 * {
+  margin: 0;
+  list-style: none;
+}
+
+.nav-menu1 > ul > li {
+  position: relative;
+  white-space: nowrap;
+  float: left;
+}
+
+.nav-menu1 a {
+  display: block;
+  position: relative;
+  color: #000000;
+  padding: 8px 8px 8px 8px;
+  transition: 0.3s;
+  font-size: 17px;
+}
+
+.nav-menu1 a:hover, .nav-menu1 .active > a, .nav-menu1 li:hover > a {
+  color: #3078be;
+  text-decoration: none;
+}
+
+.nav-menu1 .drop-down ul {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: calc(100% - 30px);
+  z-index: 99;
+  opacity: 0;
+  visibility: hidden;
+  padding: 10px 0;
+  background: #fff;
+  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+  transition: ease all 0.2s;
+}
+
+.nav-menu1 .drop-down:hover > ul {
+  opacity: 1;
+  top: 150%;
+  visibility: visible;
+}
+
+.nav-menu1 .drop-down li {
+  position: relative;
+}
+
+.nav-menu1 .drop-down ul a {
+  padding: 10px 20px;
+  font-size: 17px;
+  text-transform: none;
+  color: black;
+}
+
+.nav-menu1 .drop-down ul a:hover, .nav-menu1 .drop-down ul .active > a, .nav-menu1 .drop-down ul li:hover > a {
+  color: #3078be;
+}
+
+.nav-menu1 .drop-down-with-arrow > a:after {
+  content: "\ea99";
+  font-family: IcoFont;
+  padding-left: 5px;
+}
+
+.nav-menu1 .drop-down .drop-down ul {
+  top: 0;
+  left: calc(100% - 30px);
+}
+
+.nav-menu1 .drop-down .drop-down:hover > ul {
+  opacity: 1;
+  top: 0;
+  left: 100%;
+}
+
+.nav-menu1 .drop-down .drop-down > a {
+  padding-right: 35px;
+}
+
+.nav-menu1 .drop-down .drop-down > a:after {
+  content: "\eaa0";
+  font-family: IcoFont;
+  position: absolute;
+  right: 15px;
+}
+
+@media (max-width: 1366px) {
+  .nav-menu1 .drop-down .drop-down ul {
+    left: -90%;
+  }
+  .nav-menu1 .drop-down .drop-down:hover > ul {
+    left: -100%;
+  }
+  .nav-menu1 .drop-down .drop-down > a:after {
+    content: "\ea9d";
+  }
+}
+
+
+/* Normal desktop :992px. */
+
+/* Normal desktop :992px.
+@media (min-width: 992px) and (max-width: 1169px) {
   .slider-content {
-    padding: 0;
+    padding: 144px 0;
+  }
+} */
+
+/* Tablet desktop :768px. */
+
+
+@media (min-width: 2000px)
+{
+  .slider-content {
+    padding: 90px 0;
+    margin-top:150px;
+  }
+
+  .layer-1-3 a.ready-btn {
+    font-size: 14px;
+    margin-top: 20px;
+    padding: 10px 20px;
+  }
+
+
+  .layer-1-1 h2 {
+    font-size: 90px;
+    line-height: 80px;
+    margin-top:9%;
+  }
+
+}
+
+
+@media (min-width: 1400px) and (max-width: 1999px)
+{
+
+
+
+
+
+  .slider-content {
+    padding: 90px 0;
+    margin-top:150px;
+  }
+  .layer-1-2 h1 {
+    font-size: 76px;
+    line-height: 24px;
+    margin-top:150px;
+  }
+  .layer-1-3 a.ready-btn {
+    font-size: 14px;
+    margin-top: 20px;
+    padding: 10px 20px;
+  }
+
+
+  .layer-1-1 h2 {
+    font-size: 45px;
+    line-height: 80px;
+    margin-top:5%;
+  }
+
+}
+
+
+
+@media (min-width: 768px) and (max-width: 1399px) {
+
+
+
+
+
+  .slider-content {
+    padding: 120px 0;
+  }
+  .layer-1-2 h1 {
+    font-size: 22px;
+    line-height: 24px;
+  }
+  .layer-1-3 a.ready-btn {
+    font-size: 14px;
+    margin-top: 20px;
+    padding: 10px 20px;
+  }
+
+
+  .layer-1-1 h2 {
+    font-size: 45px;
+    line-height: 80px;
+    margin-top:5%;
+  }
+ .newimg
+ {
+   height:70px;
+   width:70px;
+
+ }
+}
+/*
+@media (max-width: 767px) {
+  .nivo-directionNav {
+    display: none;
+  }
+  .slider-content {
+    padding: 46px 0px;
+  }
+  .layer-1-2 {
+    margin: 30px 0;
+  }
+  .layer-1-1 h2 {
+    font-size: 14px;
+    line-height: 16px;
+  }
+  .layer-1-2 h1 {
+    font-size: 14px;
+    line-height: 16px;
+  }
+  .layer-1-3 a.ready-btn {
+    font-size: 12px;
+    margin-top: 10px;
+    padding: 8px 10px;
+  }
+  .layer-1-3 {
+    margin: 10px 0 0;
+  }
+  .nivo-controlNav {
+    bottom: -8px;
+  }
+}*/
+
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+  .slider-content {
+    padding: 70px 0px;
+  }
+  /* .layer-1-1 h2, .layer-1-2 h1 {
+     font-size: 24px;
+     line-height: 30px;
+   }
+ */
+  .layer-1-1 h2 {
+    font-size: 45px;
+    line-height: 60px;
+    margin-top:5%;
+  }
+
+  .newimg
+  {
+    height:70px;
+    width:70px;
+
+  }
+}
+
+
+@media  (max-width: 479px) {
+  .slider-content {
+    padding: 40px 0px;
+  }
+  /* .layer-1-1 h2, .layer-1-2 h1 {
+     font-size: 24px;
+     line-height: 30px;
+   }
+ */
+  .layer-1-1 h2 {
+    font-size: 25px;
+    line-height: 40px;
+    margin-top:5%;
+  }
+
+  .newimg
+  {
+    height:70px;
+    width:70px;
+
   }
 }
