--- a/public/user/vedio/css/style.css
+++ b/public/user/vedio/css/style.css
@@ -50,6 +50,104 @@ h1, h2, h3, h4, h5, h6, .font-primary {
   transition: background 0.2s ease-in-out;
 }
 .tlinks{text-indent:-9999px;height:0;line-height:0;font-size:0;overflow:hidden;}
+
+
+
+
+
+
+
+
+
+/*--------------------------------------------------------------
+# Header
+--------------------------------------------------------------*/
+#header {
+  font-family: 'Lora', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  height: 80px;
+  transition: all 0.5s;
+  z-index: 997;
+  padding: 20px 0;
+  background: #FFF;
+  border: 1px solid #CCC;
+}
+
+#header.header-scrolled {
+  background: #FFF;
+  height: 60px;
+  padding: 10px 0;
+  border: 1px solid #CCC;
+}
+
+#header .logo h1 {
+  font-size: 36px;
+  margin: 0;
+  padding: 0;
+  line-height: 1;
+  font-weight: bold;
+}
+
+#header .logo h1 span {
+  color: #3078be;
+}
+
+#header a:hover {
+  color: #3078be;
+  text-decoration: none;
+}
+
+#header .logo img {
+  padding: 0;
+  margin: 0;
+  max-height: 22px;
+  border-radius: 50%;
+}
+
+@media (max-width: 768px) {
+  #header {
+    height: 60px;
+    padding: 10px 0;
+    background: #FFF;
+  }
+  #header .logo h1 {
+    font-size: 28px;
+    padding: 4px 0;
+  }
+  #header .logo img {
+    padding: 0;
+    margin: 0;
+    max-height: 15px;
+    border-radius: 50%;
+  }
+
+
+
+
+}
+
+.header-bg {
+  background: url(../img/slider/slider1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top center;
+}
+
+@media (min-width: 1025px) {
+  .header-bg {
+    background-attachment: fixed;
+  }
+}
+
+.home-overly {
+  background: rgba(240, 255, 255, 0.8);
+  height: 100%;
+  position: absolute;
+  width: 100%;
+}
+
+
+
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
@@ -238,15 +336,15 @@ h1, h2, h3, h4, h5, h6, .font-primary {
 }
 
 .mobile-nav .drop-down > a:after {
-  content: "\ea99";
-  font-family: IcoFont;
+ /* content: "\ea99";
+  font-family: IcoFont;*/
   padding-left: 10px;
   position: absolute;
   right: 15px;
 }
 
 .mobile-nav .active.drop-down > a:after {
-  content: "\eaa0";
+  /*  content: "\eaa0";*/
 }
 
 .mobile-nav .drop-down > a {
