--- a/public/user/css/style.css
+++ b/public/user/css/style.css
@@ -580,8 +580,8 @@ div#preloader {
 }
 
 .nav-menu .drop-down-with-arrow > a:after {
-  /*  content: "\ea99";
-   font-family: IcoFont;*/
+   content: "\ea99";
+   font-family: IcoFont;
    padding-left: 5px;
  }
 
