--- a/public/user/css/style.css
+++ b/public/user/css/style.css
@@ -3198,6 +3198,63 @@ ul.team-socil-w3pvts li span:hover {
     margin-top:9%;
   }
 
+  h23
+  {
+    font-family:Roboto,Helvetica,Arial,sans-serif;
+    font-size:50px;
+    text-align:left;
+    line-height:55px;
+    font-weight:normal
+
+  }
+
+  h20
+  {
+    font-family:'lora',serif;
+    font-size:60px;
+    line-height:75px;
+  }
+
+  h22
+  {
+    font-size:55px;
+    color:#3078be; text-shadow:#ffffff 3px 3px 0px, rgba(0, 0, 0, 0.2) 6px 6px 0px;
+    font-style:italic;
+
+  }
+
+  h21 {
+    font-family: 'Lora', serif;
+    font-size: 50px;
+    line-height:50px;
+  }
+  .hpyuan
+  {
+    height:450px;
+    width:450px;
+  }
+
+  h19
+  {
+
+    font-family:'Lora',serif;
+    font-size:50px;
+    margin-bottom:-30px;
+    font-weight:700;
+    text-align:center;
+
+  }
+
+  h30
+  {
+    font-family:roboto,sans-serif;
+    font-size:28px;
+    line-height:35px;
+
+
+  }
+
+
 }
 
 
@@ -3229,6 +3286,66 @@ ul.team-socil-w3pvts li span:hover {
     line-height: 80px;
     margin-top:5%;
   }
+
+  h23
+  {
+    font-family:Roboto,Helvetica,Arial,sans-serif;
+    font-size:35px;
+    text-align:left;
+    line-height:40px;
+    font-weight:normal
+
+  }
+
+
+  h20
+  {
+    font-family:'lora',serif;
+    font-size:50px;
+    line-height:55px;
+  }
+
+  h22
+  {
+    font-size:40px;
+    color:#3078be; text-shadow:#ffffff 3px 3px 0px, rgba(0, 0, 0, 0.2) 6px 6px 0px;
+    font-style:italic;
+
+  }
+
+  h21 {
+    font-family: 'Lora', serif;
+    font-size: 35px;
+    line-height:45px;
+  }
+
+  .hpyuan
+  {
+    height:400px;
+    width:400px;
+  }
+
+
+  h19
+  {
+
+    font-family:'Lora',serif;
+    font-size:45px;
+    margin-bottom:-30px;
+    font-weight:700;
+    text-align:center;
+
+  }
+
+  h30
+  {
+    font-family:roboto,sans-serif;
+    font-size:30px;
+    line-height:35px;
+
+
+  }
+
 
 }
 
@@ -3265,38 +3382,67 @@ ul.team-socil-w3pvts li span:hover {
    width:70px;
 
  }
+
+  h20
+  {
+    font-family:'lora',serif;
+    font-size:45px;
+    line-height:50px;
+  }
+
+  h22
+  {
+    font-size:38px;
+    color:#3078be; text-shadow:#ffffff 3px 3px 0px, rgba(0, 0, 0, 0.2) 6px 6px 0px;
+    font-style:italic;
+
+  }
+
+  h21 {
+    font-family: 'Lora', serif;
+    font-size: 33px;
+    line-height:40px;
+  }
+
+
+  .hpyuan
+  {
+    height:350px;
+    width:350px;
+  }
+
+  h23
+  {
+    font-family:Roboto,Helvetica,Arial,sans-serif;
+    font-size:30px;
+    text-align:left;
+    line-height:35px;
+    font-weight:normal
+
+  }
+
+  h19
+  {
+
+    font-family:'Lora',serif;
+    font-size:40px;
+    margin-bottom:-30px;
+    font-weight:700;
+
+    text-align:center;
+  }
+
+  h30
+  {
+    font-family:roboto,sans-serif;
+    font-size:25px;
+    line-height:30px;
+
+
+  }
+
+
 }
-/*
-@media (max-width: 767px) {
-  .nivo-directionNav {
-    display: none;
-  }
-  .slider-content {
-    padding: 46px 0px;
-  }
-  .layer-1-2 {
-    margin: 30px 0;
-  }
-  .layer-1-1 h2 {
-    font-size: 14px;
-    line-height: 16px;
-  }
-  .layer-1-2 h1 {
-    font-size: 14px;
-    line-height: 16px;
-  }
-  .layer-1-3 a.ready-btn {
-    font-size: 12px;
-    margin-top: 10px;
-    padding: 8px 10px;
-  }
-  .layer-1-3 {
-    margin: 10px 0 0;
-  }
-  .nivo-controlNav {
-    bottom: -8px;
-  }
-}*/
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
   .slider-content {
@@ -3315,10 +3461,71 @@ ul.team-socil-w3pvts li span:hover {
 
   .newimg
   {
-    height:70px;
-    width:70px;
+    height:50px;
+    width:50px;
 
   }
+
+  h20
+  {
+    font-family:'lora',serif;
+    font-size:40px;
+    line-height:45px;
+  }
+
+  h22
+  {
+    font-size:35px;
+    color:#3078be; text-shadow:#ffffff 3px 3px 0px, rgba(0, 0, 0, 0.2) 6px 6px 0px;
+    font-style:italic;
+
+  }
+
+  h21 {
+    font-family: 'Lora', serif;
+    font-size: 30px;
+    line-height:35px;
+  }
+
+  h23
+  {
+    font-family:Roboto,Helvetica,Arial,sans-serif;
+    font-size:25px;
+    text-align:left;
+    line-height:28px;
+    font-weight:normal
+
+  }
+
+
+  .hpyuan
+  {
+    height:330px;
+    width:330px;
+  }
+
+  h19
+  {
+
+    font-family:'Lora',serif;
+    font-size:35px;
+    margin-bottom:-30px;
+    font-weight:700;
+    text-align:center;
+    line-height:40px;
+
+
+  }
+  h30
+  {
+    font-family:roboto,sans-serif;
+    font-size:20px;
+    line-height:26px;
+
+
+  }
+
+
 }
 
 
@@ -3339,8 +3546,72 @@ ul.team-socil-w3pvts li span:hover {
 
   .newimg
   {
-    height:70px;
-    width:70px;
+    height:50px;
+    width:50px;
 
   }
+
+  h30
+  {
+    font-family:roboto,sans-serif;
+    font-size:12px;
+    line-height:18px;
+
+
+
+  }
+
+  h20
+  {
+    font-family:'lora',serif;
+    font-size:22px;
+    line-height:30px;
+  }
+
+
+  h22 {
+    font-size: 19px;
+    color: #3078be;
+    text-shadow: #ffffff 3px 3px 0px, rgba(0, 0, 0, 0.2) 6px 6px 0px;
+    font-style: italic;
+
+
+  }
+
+  h21 {
+    font-family: 'Lora', serif;
+    font-size: 18px;
+    line-height:25px;
+  }
+
+  h23
+  {
+    font-family:Roboto,Helvetica,Arial,sans-serif;
+    font-size:18px;
+    text-align:left;
+    line-height:20px;
+    font-weight:normal
+
+  }
+
+  h19
+  {
+
+    font-family:'Lora',serif;
+    font-size:28px;
+    margin-bottom:-30px;
+    font-weight:700;
+    text-align:center;
+    line-height:32px;
+
+  }
+
+
+
+  .hpyuan
+  {
+    height:300px;
+    width:300px;
+  }
+
 }
