Your branch is up to date with 'origin/ying0221'.

--- a/public/user/css/style.css
+++ b/public/user/css/style.css
@@ -19,6 +19,9 @@ html, body {
 footer {
   margin-top: auto;
 }
+input[type="checkbox"] {
+  -webkit-appearance: checkbox;
+}
 .centered {
   margin: auto;
   position: relative;
